<resources>
    <string name="app_name">Gamestorm</string>
    <string name="coords">Coords</string>
    <string name="action_settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="menu_logo_description">Game logo</string>
    <string name="menu_dots_description">***</string>
    <string name="rating_pattern">Rating: %.1f</string>
    <string name="backdrop_title">Game\nStorm</string>
    <string name="backdrop_subtitle">play now</string>
    <string name="header_bg_description">Beautiful background</string>

    <string name="gi_button_play">Play</string>
    <string name="gi_button_settings">Settings</string>
    <string name="gi_button_wiki">Wiki</string>
    <string name="gi_button_scoreboard">Scoreboard</string>
    <string name="gi_button_back">Back</string>

    <string name="title_activity_snake">Snake</string>
    <string name="game_t_title">Tic-tac-toe</string>
    <string name="game_t_description">Description!</string>
    <string name="recycler_item_hint">decimal</string>
    <string name="settings_prop_name_pattern">%s: </string>

    <string name="pa_title">Players:</string>
    <string name="pa_button_cancel">Cancel</string>
    <string name="pa_button_start">Start</string>

    <string name="lf_header_title">Add user</string>
    <string name="lf_content_nick_title">Nickname</string>
    <string name="lf_content_icon_title">Icon</string>
    <string name="lf_search_title">Search</string>
    <string name="lf_footer_cancel">Cancel</string>
    <string name="lf_footer_apply">Apply</string>
    <string name="lf_search_status_descr">Status</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_s_title">Snake</string>
    <string name="game_s_description">Wow, snake!</string>
    <string name="si_header_title">Choose icon</string>
    <string name="si_footer_cancel">Cancel</string>
    <string name="si_footer_apply">Apply</string>

    <string name="bc_info_timer">Time: %f</string>
    <string name="bc_info_move">Next move: %s</string>
    <string name="mc_action_fast_start">Fast start</string>
    <string name="mt_action_reset">Reset game</string>

    <string name="aw_header">Wiki</string>
    <string name="aw_footer">Back</string>
    <string name="aw_content_tgame">
\t Field 3*3.
Players move by turns.
In order to put X or O, you need to click on the cell of the field.
To win, you need to build 3 X or O in a row.
\n\t
Field 5*5.
Players move by turns.
In order to put X or O, you need to click on the cell of the field.
To win, you need to build 4 X or O in a row.
\n\t
Field more than 7*7.
Players move by turns.
In order to put X or O, you need to click on the cell of the field.
To win, you need to build 5 X or O in a row.
    </string>
    <string name="aw_content_sgame">
\t        When you click on the left side of the screen, the snake turns to the left relative of its current position. When you click on the right - to the right, similarly.
\n\t
She must eat "food" until she crashes into herself. The more "food" she eats - the more its size and speed.
\n\t
When the snake grows to 0.6 from the square of the field, the player can squeeze the tail into one cell, on which the number of segments will be written.
    </string>

</resources>
