<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/fragment_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".LoginFragment"
    android:theme="@style/AppTheme"
    android:clickable="true"
    android:focusable="true">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.CardViewStyle">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Header -->
            <TextView
                android:id="@+id/lf.header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:padding="8dp"
                android:textAlignment="center"
                android:textSize="36sp"
                android:text="@string/lf_header_title"/>

            <!-- Search -->
            <!--<RelativeLayout-->
            <!--android:id="@+id/lf.search"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/lf.header">-->

            <!--<TextView-->
            <!--android:id="@+id/lf.search.title"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:text="@string/lf_search_title"/>-->

            <!--<EditText-->
            <!--android:id="@+id/lf.search.field"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_toEndOf="@id/lf.search.title"-->
            <!--android:layout_toStartOf="@id/lf.search.status"-->
            <!--android:inputType="text"-->
            <!--android:hint="@string/lf_search_title"/>-->

            <!--<ImageButton-->
            <!--android:id="@+id/lf.search.status"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:src="@android:drawable/ic_menu_search"-->
            <!--android:contentDescription="@string/lf_search_status_descr" />-->
            <!--</RelativeLayout>-->

            <!-- Nickname field -->
            <RelativeLayout
                android:id="@+id/lf.content.nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/lf.header">

                <TextView
                    android:id="@+id/lf.content.nick.title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/lf_content_nick_title"/>

                <EditText
                    android:id="@+id/lf.content.nick.field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@id/lf.content.nick.title"
                    android:inputType="text"
                    android:hint="@string/lf_content_nick_title"/>
            </RelativeLayout>

            <!-- Icon field -->
            <!--<RelativeLayout-->
            <!--android:id="@+id/lf.content.icon"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_below="@id/lf.content.nick">-->

            <!--<TextView-->
            <!--android:id="@+id/lf.content.icon.title"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_toStartOf="@id/lf.content.icon.field"-->
            <!--android:text="@string/lf_content_icon_title" />-->

            <!--<ImageButton-->
            <!--android:id="@+id/lf.content.icon.field"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:inputType="text"-->
            <!--android:hint="@string/lf_content_icon_title" />-->
            <!--</RelativeLayout>-->

            <!-- Footer -->
            <LinearLayout
                android:id="@+id/lf.footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/lf.content.nick"
                android:weightSum="2"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:id="@+id/lf.footer.cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/lf_footer_cancel"
                    style="?android:attr/buttonBarButtonStyle"/>

                <Button
                    android:id="@+id/lf.footer.apply"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/lf_footer_apply"
                    style="?android:attr/buttonBarButtonStyle"/>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>